public/assets/css/app.css
/*
Name: FabVPN - Admin Dashboard
Author: Sameed
Email: tecclubx@gmail.com
File: app.css
*/

/*  
  - Google Font
  - General
  - Sidebar
  - Header
  - Metismenu
  - Extra CSS
  - Invoice Page
  - Chat box
  - Email box
  - Compose Mail
  - Navs and Tabs
  - Background Colors
  - Authentication
  - Buttons 
  - Pricing Table
  - Forms
  - Responsive
*/


body {

	font-size: 14px;

	letter-spacing: .5px;

	font-family: "Rubik", sans-serif;

	overflow-x: hidden
}

a {

	text-decoration: none
}

.wrapper {

	width: 100%;

	position: relative
}

.sidebar-wrapper {

	width: 250px;

	height: calc(100% - 60px);

	position: fixed;

	top: 60px;

	bottom: 0;

	left: 0;

	background: rgb(0 0 0 / 20%);

	border-right: 1px solid rgb(255 255 255 / 15%);

	z-index: 11;

	box-shadow: 0 .3rem .8rem rgba(0, 0, 0, .12) !important;

	transition: all .2s ease-out
}

.sidebar-header {

	width: 250px;

	height: 60px;

	display: flex;

	align-items: center;

	position: fixed;

	top: 0;

	bottom: 0;

	padding: 0 15px;

	z-index: 5;

	background: rgb(255 255 255 / 12%);

	border-bottom: 1px solid rgb(255 255 255 / 12%);

	border-right: 1px solid rgb(255 255 255 / 12%);

}

.logo-icon {

	width: 120px
}

.wrapper.toggled:not(.sidebar-hovered) .sidebar-wrapper .sidebar-header .logo-icon {

	width: 60px
}

.logo-text {

	font-size: 22px;

	margin-left: 10px;

	margin-bottom: 0;

	letter-spacing: 1px;

	color: #ffffff
}

.toggle-icon {

	font-size: 22px;

	cursor: pointer;

	color: #ffffff
}

.topbar {

	position: fixed;

	top: 0;

	left: 250px;

	right: 0;

	height: 60px;

	background: rgb(0 0 0 / 20%);

	border-bottom: 1px solid rgb(255 255 255 / 15%);

	z-index: 10;

	box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important
}

.topbar .navbar {

	width: 100%;

	height: 60px;

	padding-left: 1.5rem;

	padding-right: 1.5rem;

}

.page-wrapper {

	height: 100%;

	margin-top: 60px;

	margin-bottom: 0px;

	margin-left: 250px
}

.page-content {

	padding: 1.5rem 1.5rem 0 1.5rem
}

.page-footer {

	background: rgb(0 0 0 / 20%);

	position: absolute;

	left: 250px;

	right: 0;

	text-align: center;

	padding: 7px;

	color: #fff;

	font-size: 14px;

	border-top: 1px solid rgb(255 255 255 / 15%);

	z-index: 3
}

.wrapper.toggled .topbar {

	left: 70px
}

.wrapper.toggled .page-wrapper {

	margin-left: 70px
}

.wrapper.toggled .page-footer {

	left: 70px
}

.sidebar-wrapper ul {

	padding: 0;

	margin: 0;

	list-style: none;

	background: 0 0
}

.sidebar-wrapper .metismenu {

	background: 0 0;

	display: -webkit-box;

	display: -ms-flexbox;

	display: flex;

	padding: 10px;

	margin-top: 0px;

	-webkit-box-orient: vertical;

	-webkit-box-direction: normal;

	-ms-flex-direction: column;

	flex-direction: column
}

.sidebar-wrapper .metismenu li+li {

	margin-top: 5px
}

.sidebar-wrapper .metismenu li:first-child {

	margin-top: 5px
}

.sidebar-wrapper .metismenu li:last-child {

	margin-bottom: 5px
}

.sidebar-wrapper .metismenu>li {

	display: -webkit-box;

	display: -ms-flexbox;

	display: flex;

	-webkit-box-orient: vertical;

	-webkit-box-direction: normal;

	-ms-flex-direction: column;

	flex-direction: column;

	position: relative
}

.sidebar-wrapper .metismenu a {

	position: relative;

	display: flex;

	align-items: center;

	justify-content: left;

	padding: 6px 16px;

	font-size: 15px;

	color: rgb(255 255 255 / 75%);

	outline-width: 0;

	text-overflow: ellipsis;

	overflow: hidden;

	letter-spacing: .5px;

	border: 1px solid #ffffff00;

	transition: all .3s ease-out
}

.sidebar-wrapper .metismenu a .parent-icon {

	font-size: 24px;

	line-height: 1
}

.sidebar-wrapper .metismenu a .menu-title {

	margin-left: 10px
}

.sidebar-wrapper .metismenu ul a {

	padding: 6px 15px 6px 20px;

	font-size: 15px;

	border: 0
}

.sidebar-wrapper .metismenu ul a i {

	margin-right: 10px
}

.sidebar-wrapper .metismenu ul {

	border: 1px solid rgb(255 255 255 / 12%);

	background: rgb(255 255 255 / 10%);

}

.sidebar-wrapper .metismenu ul ul a {

	padding: 8px 15px 8px 30px
}

.sidebar-wrapper .metismenu ul ul ul a {

	padding: 8px 15px 8px 45px
}

.sidebar-wrapper .metismenu .mm-active>a,

.sidebar-wrapper .metismenu a:active,

.sidebar-wrapper .metismenu a:focus,

.sidebar-wrapper .metismenu a:hover {

	color: #ffffff;

	text-decoration: none;

	background: rgb(255 255 255 / 15%);

}

.menu-label {

	padding: 20px 15px 5px 5px;

	color: rgb(255 255 255 / 50%);

	text-transform: uppercase;

	font-size: 12px;

	letter-spacing: .5px
}

.metismenu .has-arrow:after {

	position: absolute;

	content: "";

	width: .5em;

	height: .5em;

	border-style: solid;

	border-width: 1.2px 0 0 1.2px;

	border-color: initial;

	right: 15px;

	transform: rotate(-45deg) translateY(-50%);

	transform-origin: top;

	top: 50%;

	transition: all .3s ease-out
}
/* ... */

